Fixed player list on mobile

--- a/app/app.css
+++ b/app/app.css
@@ -331,7 +331,7 @@ body {
   margin-right: auto;
 }
 
-.navigationbutton + .navigationbutton {
+.navigationbar .navigationbutton + .navigationbutton {
   margin-left: 100px;
 }
 
